src/theme.scss
/* ... */
.youlag-mode--fullscreen {
  overflow: hidden;
}

body {
  /* Youlag loading spinner */
  &:has(#global main#stream):before {
    /* Loading spinner, before the youlag script has fully loaded. Only on feed stream pages. */
    content: "Loading";
    position: fixed;
    top: 89px;
    left: 50%;
    width: 260px;
    height: 62px;
    backdrop-filter: blur(60px);
    box-shadow: inset -8px 4px 70px 0px hsla(0, 0%, 100%, .1137254902);
    border: 1px solid color-mix(in oklab,#ffffff 28%,transparent);
    background-image: var(--yl-loading-spinner-background-image);
    background-repeat: no-repeat;
    background-position: 82px;
    background-size: 18px;
    z-index: 9999;
    transition: opacity 0.2s;
    color: var(--yl-color-text-default);
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding-left: 111px;
    box-sizing: border-box;
    font-family: arial;
    font-size: var(--yl-text-xs);
    letter-spacing: 1px;
    white-space: pre;
    pointer-events: none;
    border-radius: 12px;
    opacity: 0;
    animation-name: fade-in--youlag-loading;
    animation-duration: 2s ease-in-out 1s forwards;
    animation-timing-function: ease-in-out;
    animation-delay: 1s;
    animation-fill-mode: forwards;

    @media (max-width: 840px) {
      width: calc(100% - var(--yl-p-sm) * 2);
      left: var(--yl-p-sm);
      overflow: hidden;
      padding-left: 40%;
      background-position: calc(40% - 8px);
    }
  }

  /* Display only the youlag loading on non-settings page, that is, feed pages. */
  #global {
    position: relative;
    overflow-x: hidden;

    &:after {
      /* before youlag-loaded: Black backdrop to hide feed content while loading Youlag script. */
      content: "";
      position: fixed;
      top: 0;
      left: 0;
      height: 100%;
      width: calc(100% - var(--yl-sidenav-width));
      margin-left: var(--yl-sidenav-width); /* To display the sidenav while loading Youlag */
      box-sizing: border-box;
      background: var(--yl-color-body-background);
      background: rgb(25 25 25 / 80%);
      z-index: 40;
      transition: 0.2s;
      opacity: 1;
      backdrop-filter: blur(40px);

      @media (max-width: 840px) {
        width: 100%;
        margin-left: 0;
      }
    }

    @media (max-width: 840px) {
      padding-top: 54px; /* Mobile: Height of top navigation bar, to avoid fixed top header to cover content underneath. */
    }
  }

  &.youlag-loaded {
    /* Youlag script has loaded, remove loading spinner and feed overlay. */
    &:before {
      display: none !important;
    }
  
    #global {
      &:after {
        /* youlag-loaded: Remove black backdrop after Youlag script has loaded. */
        display: none !important;
      }
    }
  }


  & > header.header {
    /* Desktop: Place header above loading overlay, to not block access to the settings menu while youlag is in a blocking/loading state. */
    position: relative;
    z-index: 45; 
  }

  &.profile,
  &.display,
  &.reading,
  &.archiving,
  &.integration,
  &.shortcut,
  &.queries,
  &.index,
  &.privacy,
  &.system,
  &.manage,
  &.checkInstall,
  &.logs,
  &.about {
    #global {
      &:after {
        /* Disable youlag loading overlay on settings pages. */
        display: none;
      }
    }
  }
}


#youlagTheaterModal {
  position: fixed;
  z-index: 99999;
  bottom: 0px;
  right: 0px;
  height: 100vh;
  height: 100dvh;
  width: 100vw;
  background: #060606;
  overflow-y: auto;
  overflow-x: hidden;
  box-sizing: border-box;
  transition: 0.3s; /* Time to restore to fullscreen */
  will-change: width, height, transform;
  /* For browsers with subpixel rendering issues, hide background content peeking through. */
  box-shadow: 0 0 0 10px #060606;
  transform-origin: bottom right;

  &.youlag-modal-feed-item--text {
    /* For feed items that are not video feeds. */

    transition: 0.1s; /* Time to restore articles to fullscreen. Use shorter time to avoid layout shift due to text wrapping. */

    .youlag-iframe-container {
      display: none;
    }

    .youlag-video-container {
      /* For text feeds, the thumbnail is displayed in the video area instead. */
      max-height: 50vh;

      .youlag-thumbnail-container {
        animation: none !important;
        width: 100% !important;
        height: auto !important;
        padding-bottom: 0 !important;
        
        .youlag-video-thumbnail {
          position: static !important;
          transform: none !important;
          object-fit: cover;
          max-height: 50vh;
          object-position: 0% 20%;
        }
      }
    }



    .youlag-video-description-content {
      margin: 0 auto;

      a {
        color: #dadada;
        box-shadow: #fff 0 -1px 0 inset;
      }

      ul {
        list-style-position: inside;
      }

      img {
        border-radius: 8px;
      }

      pre {
        overflow: auto;
        background-color: #ffffff1c;
        border-radius: 8px;
        padding: 1rem;
      }
    }
  }
}

.youlag-theater-modal-container {
  width: 100%;
}

.youlag-theater-modal-content {
  width: 100%;
}

.youlag-video-header {
  display: flex;
  gap: var(--yl-m-3xs);
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1;
  display: flex;
  justify-content: flex-end;
  padding: var(--yl-p-xs);
  background: linear-gradient(to bottom, black 0%, transparent 100%);
}

#youlagVideoSource {
  margin-right: auto;
  border-radius: 12px;
  padding-right: var(--yl-p-sm);
  padding-left: var(--yl-p-sm);
}
/* ... */

